REFACTOR: Actualizaciones versión 1.1.0

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -184,7 +184,7 @@ nuevaa{
     padding: 30px;
     font-size: 50px;
     transition: .3s ease all;
-    background-color: rgb(231, 111, 247);
+    background-color: #FF0083;
 
 };
 
@@ -206,7 +206,7 @@ nuevaa{
     padding: 30px;
     font-size: 50px;
     transition: .3s ease all;
-    background-color: rgb(231, 111, 247);
+    background-color: #FF0083;
 
 };
 
@@ -216,7 +216,7 @@ nuevaa{
 
 .botonn1:hover{
     color: white;
-    background-color: #FF9516;
+    background-color: #ffa600;
 }
 
 
@@ -229,7 +229,7 @@ nuevaa{
     padding: 30px;
     font-size: 50px;
     transition: .3s ease all;
-    background-color: rgb(231, 111, 247);
+    background-color: #FF0083;
 
 };
 
@@ -251,7 +251,7 @@ nuevaa{
     padding: 30px;
     font-size: 50px;
     transition: .3s ease all;
-    background-color: rgb(231, 111, 247);
+    background-color: #FF0083;
 
 };
 
@@ -273,7 +273,7 @@ nuevaa{
     padding: 30px;
     font-size: 50px;
     transition: .3s ease all;
-    background-color: rgb(231, 111, 247);
+    background-color: #FF0083;
 
 };
 
@@ -295,7 +295,7 @@ nuevaa{
     padding: 30px;
     font-size: 50px;
     transition: .3s ease all;
-    background-color: rgb(231, 111, 247);
+    background-color: #FF0083;
 
 };
 
@@ -305,7 +305,7 @@ nuevaa{
 
 .botonn5:hover{
     color: white;
-    background-color: #ff0080;
+    background-color: #4c00ff;
 }
 
 .botonn6{
@@ -317,7 +317,7 @@ nuevaa{
     padding: 30px;
     font-size: 50px;
     transition: .3s ease all;
-    background-color: rgb(231, 111, 247);
+    background-color: #FF0083;
 
 };
 
@@ -339,7 +339,7 @@ nuevaa{
     padding: 30px;
     font-size: 50px;
     transition: .3s ease all;
-    background-color: rgb(231, 111, 247);
+    background-color: #FF0083;
 
 };
 
@@ -361,7 +361,7 @@ nuevaa{
     padding: 30px;
     font-size: 50px;
     transition: .3s ease all;
-    background-color: rgb(231, 111, 247);
+    background-color: #FF0083;
 
 };
 
