--- a/public/css/app.css
+++ b/public/css/app.css
@@ -456,4 +456,79 @@ nuevaa{
 }
 
 
+.ref{
+    color: #FF0083;
+
+    text-decoration: none;
+}
+
+.ref:hover{
+    color: #E21B18;
+}
+
+.tutulo{
+    text-align: center;
+    font-size: 40px;
+    color: #6a6a6a;
+    margin-top: 50px;
+    font-weight: 100;
+}
+
+
+.container-1{
+    width: 100%;
+    max-width: 1200px;
+    height: 430%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+
+}
+
+.container-1 .card-1{
+    width: 330px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+    padding-bottom: 15px;
+    padding-top: 25px;
+
+}
+
+.container-1 .card-1:hover{
+    transform: translateY(-15px);
+    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
+
+
+}
+
+.container-1 .card-1 img{
+    object-fit: cover;
+    width: 230px;
+    height: 220px;
+    border-radius: 15px;
+}
+
+.container-1 .card-1 h4{
+    font-weight: 600px;
+}
+
+.container-1 .card-1 p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+
+}
+
+.container-1 .card-1 a{
+    padding-bottom: 5px;
+    font-size: 16px;
+    font-weight: 300;
+
+}
 
