--- a/public/css/app.css
+++ b/public/css/app.css
@@ -486,6 +486,10 @@ nuevaa{
 
 }
 
+.container-1 .card-1 h4{
+    margin: 20px;
+}
+
 .container-1 .card-1{
     width: 330px;
     height: auto;
@@ -493,7 +497,7 @@ nuevaa{
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     margin: 20px;
-    text-align: center;
+    text-align:center;
     transition: all 0.25s;
     padding-bottom: 15px;
     padding-top: 25px;
@@ -526,9 +530,138 @@ nuevaa{
 }
 
 .container-1 .card-1 a{
-    padding-bottom: 5px;
+
+    /* padding-bottom: 5px; */
     font-size: 16px;
     font-weight: 300;
 
 }
 
+
+
+
+
+.container-2{
+    width: 100%;
+    max-width: 1200px;
+    height: 430%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+
+}
+
+.container-2 .card-2 h4{
+    margin: 20px;
+}
+
+.container-2 .card-2{
+    width: 500px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align:center;
+    transition: all 0.25s;
+    padding-bottom: 15px;
+    padding-top: 25px;
+
+}
+
+.container-2 .card-2:hover{
+    transform: translateY(-15px);
+    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
+
+
+}
+
+.container-2 .card-2 img{
+
+    width: 450px;
+    height: 320px;
+    border-radius: 10px;
+}
+
+.container-2 .card-2 h4{
+    font-weight: 600px;
+}
+
+.container-2 .card-2 p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+
+}
+
+.container-2 .card-2 a{
+    padding-bottom: 5px;
+    font-size: 16px;
+    font-weight: 300;
+
+
+}
+
+/*
+.container-3{
+    width: 800px;
+    max-width: 1200px;
+    height: 430%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+
+}
+
+.container-3 .card-3 h4{
+    margin: 20px;
+}
+
+.container-3 .card-3{
+    width: 500px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align:center;
+    transition: all 0.25s;
+    padding-bottom: 15px;
+    padding-top: 25px;
+
+}
+
+.container-3 .card-3:hover{
+    transform: translateY(-15px);
+    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
+
+
+}
+
+.container-3 .card-3 img{
+
+    width: 450px;
+    height: 320px;
+    border-radius: 10px;
+}
+
+.container-3 .card-3 h4{
+    font-weight: 600px;
+}
+
+.container-3 .card-3 p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+
+}
+
+.container-3 .card-3 a{
+    padding-bottom: 5px;
+    font-size: 16px;
+    font-weight: 300;
+
+}
+ */
