--- a/public/css/app.css
+++ b/public/css/app.css
@@ -603,24 +603,26 @@ nuevaa{
 
 }
 
-/*
+
 .container-3{
-    width: 800px;
-    max-width: 1200px;
+    width: 1000px;
     height: 430%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
+    border: #E21B18;
 
 }
 
-.container-3 .card-3 h4{
+
+/*
+ .container-3 .card-3 h4{
     margin: 20px;
 }
 
 .container-3 .card-3{
-    width: 500px;
+    width: 1500px;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
