REFACTOR: cambios en ventana modal

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -32,20 +32,9 @@
 #btn-modal:checked ~ .modal .contenedor{
 	transform: translateY(0%);
 }
-.contenedor header{
-	padding: 15px;
-	background: #FF0083;
-	color: #fff;
 
-}
-.contenedor label{
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	color: #fff;
-	font-size: 20px;
-	cursor: pointer;
-}
+
+
 .contenido{
 	width: 100%;
 	padding: 10px;
@@ -60,30 +49,24 @@
 	display: none;
 }
 
-.lbl-modal{
-	background: #FF0083;
-    color: #fff;
-	padding: 10px 15px;
-	border-radius: 4px;
-	cursor: pointer;
-}
+
 
 @media only screen and (min-width:320px) and (max-width:768px){
 	.contenedor{
 		width: 95%;
 	}
-} */
+}
 
-
+/*
 .cta{
     display: inline-block;
-    padding: 7px 0;
+    padding: 6px 0;
     width: 100px;
-    border: 1px solid #fff;
-    border-radius: 50px;
+    border: 0.2px solid #000;
+    border-radius: 5px;
     text-align: center;
     text-decoration: none;
-    color: #283773;
+    color: #fff;
     background-color: #fff;
 }
 
@@ -104,10 +87,12 @@
 }
 
 .modal{
-    width: 40%;
-    height: 50%;
+    width: 60%;
+    height: 60%;
     background-color: #fff;
-    text-align: center;
+    padding-right: 10px;
+    padding-left: 10px;
+    text-align: justify;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -119,13 +104,12 @@
 
 .close{
     position: absolute;
-    top: 5px;
+    top: 15px;
     right: 5px;
     display: inline-block;
     width: 25px;
-    height: 25px;
-    background-color: #c44a4a;
-    color: #fff;
+    height: 15px;
+    color: red;
     line-height: 25px;
     cursor: pointer;
     border-radius: 50%;
@@ -135,3 +119,109 @@
 .modal-close{
     transform: translateY(-200%);
 }
+
+.contenedor label{
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	color: #fff;
+	font-size: 20px;
+	cursor: pointer;
+}
+
+.lbl-modal{
+	background: #FF0083;
+	padding: 10px 15px;
+	border-radius: 4px;
+	cursor: pointer;
+} */
+
+.ctn{
+    display: inline-block;
+    padding: 6px 0;
+    width: 100px;
+    border: 0.2px solid #000;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    color: #ff0083;
+    background-color: #fff;
+}
+
+.ctn:hover{
+    transition: 0.3s;
+    background-color: #ff0083;
+    color: white;
+    border: #FF0083 solid 0.2px;
+}
+
+.cta{
+    text-decoration: none;
+    display: inline-block;
+    padding: 6px 0;
+    width: 100px;
+    border: 0.2px solid #000;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    color: #000;
+    background-color: #fff;
+}
+
+.contenedor-textos2 a:hover{
+    text-decoration: none;
+    transition: 0.3s;
+    background-color: #0f0f0f;
+    color: white;
+    border: #0f0f0f solid 0.2px;
+
+}
+
+.w-5{
+	width: 2.16em;
+}
+
+.model-content{
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.contenido{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    padding-right: 10px;
+    padding-left: 10px;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: relative;
+    transition: transform 0.8s;
+    transform: translateY(0%);
+    border-radius: 10px;
+}
+
+.noticiaa img{
+    text-align: center;
+    align-items: center;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+
+
+}
+
+
+
