--- a/public/css/app.css
+++ b/public/css/app.css
@@ -616,54 +616,105 @@ nuevaa{
 }
 
 
-/*
- .container-3 .card-3 h4{
-    margin: 20px;
+.cta{
+    display: inline-block;
+    padding: 6px 0;
+    width: 100px;
+    border: 0.2px solid #000;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background-color: #fff;
 }
 
-.container-3 .card-3{
-    width: 1500px;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    margin: 20px;
-    text-align:center;
-    transition: all 0.25s;
-    padding-bottom: 15px;
-    padding-top: 25px;
-
+.contenedor-textos{
+    display: flex;
 }
 
-.container-3 .card-3:hover{
-    transform: translateY(-15px);
-    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
-
+.contenedor-textos a{
+    color: #FF0083;
 
 }
 
-.container-3 .card-3 img{
+.contenedor-textos a:hover{
+    transition: 0.3s;
+    background-color: #ff0083;
+    color: white;
+    border: #FF0083 solid 0.2px;
+    text-decoration: none;
 
-    width: 450px;
-    height: 320px;
+}
+
+
+
+.vermas a{
+    color: #6a6a6a;
+    text-decoration:double;
+}
+
+.vermas a:hover{
+    color: #000;
+}
+
+.noticia img{
+    text-align: center;
+    align-items: center;
+    border-radius: 10px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+
+
+}
+
+
+.model-content{
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.contenido{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    padding-right: 10px;
+    padding-left: 10px;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: relative;
+    transition: transform 0.8s;
+    transform: translateY(0%);
     border-radius: 10px;
 }
 
-.container-3 .card-3 h4{
-    font-weight: 600px;
-}
-
-.container-3 .card-3 p{
-    padding: 0 1rem;
-    font-size: 16px;
-    font-weight: 300;
+.contenido img{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
 
 }
 
-.container-3 .card-3 a{
-    padding-bottom: 5px;
-    font-size: 16px;
-    font-weight: 300;
-
+.contenido p{
+    width: 97%;
+    height: auto;
 }
- */
+
+.modal-header{
+    color: white;
+    background-color: #FF0083;
+}
+
