--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,35 +1,30 @@
 
-.swiper {
-  width: 100%;
-  height: 100%;
-}
+
 
 .swiper-slide {
+    width: 100%;
   text-align: center;
   font-size: 18px;
   background: #fff;
+  border-radius: 15px;
+  box-shadow: 0px 4px 4px rgba(196, 196, 196, 0.25);
 
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
+
+
 }
 
-.swiper-slide img {
+.container .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
+
+
+
+
 
 .container .swiper-slide .card-description{
     padding:1rem 1rem;
@@ -42,12 +37,15 @@
 
 }
 .container .swiper-slide .card-link a{
+
     text-decoration: none;
-    color: #1d6ce2;
+
 }
 .swiper-button-next{
+
     right: 26px !important;
 }
 .swiper-button-prev{
+
     left: 26px !important;
 }
