--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,23 @@
+body{
+    overflow-x: hidden;
+}
+
+body::-webkit-scrollbar{
+    width: 8px;
+
+
+}
+
+
+
+body::-webkit-scrollbar-thumb{
+    background-color: #ff0083;
+    border-radius: 10px;
+}
+
+
+
+
 .bt-wsp{
     position: fixed;
     width: 55px;
@@ -408,7 +428,7 @@ nuevaa{
 .carrusel-items1{
     display: flex;
 
-    overflow-y: hidden;
+    overflow-y: scroll;
 }
 
 .carrusel-items1::-webkit-scrollbar {
@@ -717,5 +737,43 @@ nuevaa{
     color: white;
     background-color: #FF0083;
 }
+
+
+.carrusel-itemss{
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+
+}
+
+.carrusel-itemss::-webkit-scrollbar {
+    width: 3px;
+
+}
+
+.carrusel-itemss::-webkit-scrollbar-thumb {
+    background-color: #FF0083;
+    border-radius: 10px;
+}
+
+
+
+
+.carrusel-itemm{
+    padding: 10px;
+    min-width: 25%;
+    max-width: 25%;
+
+
+
+}
+
+.carrusel-itemm img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
 
 
