--- a/public/css/app.css
+++ b/public/css/app.css
@@ -775,4 +775,76 @@ nuevaa{
 }
 
 
+.container-4{
+    width: 100%;
+    max-width: 1200px;
+    height: 430%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+
+}
+
+.container-4 .card-4 h4{
+    margin: 20px;
+}
+
+.container-4 .card-4{
+    width: 330px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align:justify;
+    transition: all 0.25s;
+    padding-bottom: 15px;
+    padding-top: 25px;
+
+}
+
+.container-4 .card-4:hover{
+    background-color: #ff0083;
+    color: #fff;
+    transform: translateY(-15px);
+    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
+
+
+}
+
+.container-4 .card-4 img{
+    text-align: center;
+    align-items: center;
+    object-fit: cover;
+    width: 100%;
+    height: 50%;
+
+}
+
+.container-4 .card-4 h4{
+    font-weight: 600px;
+}
+
+.container-4 .card-4 p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+
+}
+
+.container-4 .card-4 a{
+
+    /* padding-bottom: 5px; */
+    font-size: 16px;
+    font-weight: 300;
+
+}
+
+.bordes{
+
+    padding-left: 16px;
+}
+
+
 
