--- a/public/css/app.css
+++ b/public/css/app.css
@@ -892,3 +892,11 @@ nuevaa{
     text-align: center;
 }
 
+.usuario {
+    width: 50px;
+    height: 50px;
+    border: 1px solid; color: #FFf;
+    border-radius: 50%;
+
+}
+
