--- a/public/css/splider-js.css
+++ b/public/css/splider-js.css
@@ -38,10 +38,10 @@
   .una{
   display: inline-block;
   position: absolute;
-  width: 70%;
-  height: 60%;
+  width: 80%;
+  height: 80;
   top: 40%;
-  left: 60%;
+  left: 50%;
   transform: translate(-50%, -50%);
   }
   .dos{
