--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -220,10 +220,8 @@
     text-align: center;
     align-items: center;
     object-fit: cover;
-    width: 100%;
-    height: 100%;
-
-
+    /* width: 150px;
+    height: auto; */
 }
 
 .vermaa{
