--- a/public/css/app.css
+++ b/public/css/app.css
@@ -681,8 +681,9 @@ nuevaa{
     align-items: center;
     border-radius: 10px;
     object-fit: cover;
-    max-width: 100%;
-    height: 100%; 
+    max-width: 500px;
+    max-height: 500px; 
+    
 }
 @supports(object-fit: cover){
     .noticia img{
