--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -284,3 +284,7 @@
     border-radius: 50px;
     width: 400px;
  }
+
+ body {
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; 
+  }
