--- a/public/css/app.css
+++ b/public/css/app.css
@@ -827,8 +827,12 @@ nuevaa{
 }
 
 .tamaño{
-    width: 100%;
-    height: 200px;
+    width:10rem;
+    height: 10rem;
+    text-align:center;
+    justify-content: center;
+    top: 50%;
+    left: 50%;
 }
 
 .tam{
@@ -938,11 +942,6 @@ nuevaa{
     padding-top: 15px;
     border-left:2px solid #ff0083;
     margin-right: 10px;
-
-    margin-right: 10px;
-
-
-
 }
 
 
@@ -960,7 +959,7 @@ nuevaa{
 .carrusel-itemmms{
     padding: 5px;
     min-width: 33%;
-    max-width: 35%;
+    max-width: 33%;
     text-align: center;
     color: #000;
     font-size: medium;
@@ -972,7 +971,7 @@ nuevaa{
 
 .carrusel-itemmms img {
     display: flex;
-    padding: 20px;
+    padding: 15px;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -1012,8 +1011,8 @@ nuevaa{
 }
 .carrusel-itemmmsn{
     padding: 5px;
-    min-width: 35%;
-    max-width: 40%;
+    min-width: 33%;
+    max-width: 33%;
     text-align: center;
     color: #000;
     font-size: medium;
@@ -1023,7 +1022,7 @@ nuevaa{
 
 .carrusel-itemmmsn img {
     display: flex;
-    padding: 20px;
+    padding: 15px;
     width: 100%;
     height: 100%;
     object-fit: cover;
