--- a/public/css/app.css
+++ b/public/css/app.css
@@ -930,12 +930,16 @@ nuevaa{
 
 .usuariofoto {
     margin-top: 30px;
-    margin-right: 70px;
+    margin-right: 40px;
     margin-bottom: 30px;
     width: 150px;
     height: 180px;
     border: 1px solid; color: #ff0080;
     border-radius: 50%;
+}
+
+.userfoto{
+   width: 250px;
 }
 
 .carrusel-itemsss{
