--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -374,16 +374,31 @@
     width: 400px;
  }
 
- .cambiarfoto{
-    width: 110px;
-    display: block;
+ /* input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    border: none;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
     color: #ff0080;
-    font-weight: 800;
-    margin-left: 20px;
+    margin-left: 10px;
+} */
+ .cambiarfoto{
+    color: #ff0080;
+    background-color: transparent;
+    border: none;
+    margin-left: 25px;
+    display: block;
+    cursor: pointer;
+    font-weight: 500;
  }
 
  .cambiarfoto:hover{
     color: #ff0080;
+    text-decoration: none;
  }
  
  .inputfoto{
