--- a/public/css/app.css
+++ b/public/css/app.css
@@ -189,6 +189,7 @@ neww{
 
 nuevaa{
     text-align: justify;
+    width: 100%;
 }
 
 
@@ -933,7 +934,7 @@ nuevaa{
     margin-right: 40px;
     margin-bottom: 30px;
     width: 150px;
-    height: 180px;
+    height: 150px;
     border: 1px solid; color: #ff0080;
     border-radius: 50%;
 }
