--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3090,7 +3090,7 @@ textarea.form-control-lg {
 
 .icon-eye1{
   position: absolute;
-  left: 320px;
+  right: 20px;
   top: 67%;
   transform: translateY(-50%);
   cursor: pointer;
@@ -3105,7 +3105,7 @@ textarea.form-control-lg {
 
 .icon-eye2{
   position: absolute;
-  left: 320px;
+  right: 20px;
   top: 72%;
   transform: translateY(-50%);
   cursor: pointer;
@@ -3119,7 +3119,7 @@ textarea.form-control-lg {
 
 .icon-eye3{
   position: absolute;
-  left: 320px;
+  right: 20px;
   top: 67%;
   transform: translateY(-50%);
   cursor: pointer;
@@ -3130,6 +3130,7 @@ textarea.form-control-lg {
 .icon-eye3:hover{
   color: #ff0080;
 }
+
 
 
 .form {
@@ -12033,3 +12034,118 @@ fieldset:disabled .btn {
   }
 }
 /*# sourceMappingURL=custom.css.map */
+
+.navbar-ul {
+  display: flex;
+  list-style: none;
+  padding: 8px;
+}
+
+.menu_nav{
+  padding: 7px;
+  text-decoration: none;
+}
+
+.menu_nav:hover{
+  text-decoration: none;
+  
+}
+
+.checkbtn{
+  font-size: 30px;
+  color: #fff;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+
+#check{
+  display: none;
+}
+
+@media (max-width: 1200px){
+.navbar{
+  height: 82px;
+}
+
+  .checkbtn{
+    display: block;
+    cursor: pointer;    
+  }
+
+  .name_nav, .foto_nav{
+    display: none;
+  }
+
+  .collapse {
+    position: fixed;
+    top: 120px;
+    bottom: 0;
+    background: red;
+    width: 100%;
+    left: 0;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    clip-path: circle(0 at center);
+    transition: clip-path 1s ease-in-out;
+  }
+
+  .check_input:checked + .collapse{
+    clip-path: circle(100% at center);
+  }
+}
+
+/* @media (max-width: 952px){
+  .navbar-brand{
+    padding-left: 20px;
+  }
+
+  .navbar, .navbar-nav, .nav-item, .nav-link{
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 992px){
+
+  .navbar-brand{
+    width: 150px;
+    font-weight: 600;
+  }
+
+  .checkbtn{
+    display: block;
+  }
+
+  .navbar-nav{
+    position: fixed;
+    width: 100%;
+    height: 100vh;  
+    background: #bb2d3b;
+    top: 50px;
+    left: -100%;
+    text-align: center;
+    transition: all .4s;
+  }
+
+  .navbar, .navbar-nav, .nav-item{
+    display: block;
+    line-height: 0px;
+  }
+
+  .navbar, .navbar-nav, .nav-item, .nav-link{
+    font-size: 20px;
+  }
+
+  li a:hover, li a.nav-link{
+    background: none;
+    color: red;
+  }
+
+  #check:checked ~ ul{
+    left:0;
+  } 
+} */
