--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -246,7 +246,7 @@
 .form-body{
     float: left;
     padding: 0px;
-    width: 800px;
+    width: 840px;
     min-width: 300px;
     border-radius: 10px;
     border: solid 1px; color: #ff0080;
@@ -269,7 +269,7 @@
 }
 
 .form-body input{
-    width: 300px;
+    width: 340px;
     text-align: center;
 }
 
@@ -319,6 +319,14 @@
 .caracteres2{
     margin-bottom: 0px;
     margin-left: 45px;
+    font-size: 10px;
+    color: rgb(168, 162, 162);
+}
+
+.caracteres3{
+    width: 170px;
+    margin-top: 10px;
+    margin-right: 30px;
     font-size: 10px;
     color: rgb(168, 162, 162);
 }
@@ -374,23 +382,64 @@
     width: 400px;
  }
 
- /* input[type="file"] {
+.file input{
+    display: none;
+}
+
+.file label{
+    display: block;
+    padding: 8px 21px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    background-color: #ff0080;
+    cursor: pointer;
+}
+ 
+ /* p#texto{
+    text-align: center;
+    color: #ff0080;
+ }
+
+ div#div_file{
+    position: relative;
+    margin: 50px;
+    padding: 10px;
+    width: 150px;
+    background-color: transparent;
+ }
+ 
+ input#btn-enviar{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+ }
+
+ input[type="file"] {
     display: none;
 }
 
 .custom-file-upload {
     border: none;
     display: inline-block;
-    padding: 6px 12px;
+   
     cursor: pointer;
     color: #ff0080;
-    margin-left: 10px;
+    margin-left: 25px;
+    margin-bottom: 10px;
 } */
+
  .cambiarfoto{
     color: #ff0080;
     background-color: transparent;
     border: none;
     margin-left: 25px;
+    margin-bottom: 0px;
+    padding: 0;
     display: block;
     cursor: pointer;
     font-weight: 500;
@@ -405,9 +454,11 @@
     margin-left: 25px;
  }
 
- .guardar{
-    margin-left: 130px;
-    width: 100px;
+ .actualizarfoto{
+    display: block;
+    margin-left: 45px;
+    font-size: 10px;
+    width: 60px;
     text-align: center;
     background-color: #ff0080;
     color: white;
