--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,19 +4,28 @@ body{
 
 body::-webkit-scrollbar{
     width: 8px;
-
-
 }
 
+.sunco_barra::-webkit-scrollbar-thumb{
+    background-color: #42B8BC;
+    border-radius: 10px;
+}
+
+.libre_barra::-webkit-scrollbar-thumb{
+    background-color: rgba(0, 0, 255, 0.816);
+    border-radius: 10px;
+}
+
+.navega_barra::-webkit-scrollbar-thumb{
+    background-color: #0065C1;
+    border-radius: 10px;
+}
 
 
 body::-webkit-scrollbar-thumb{
     background-color: #FE3EB2;
     border-radius: 10px;
 }
-
-
-
 
 .bt-wsp{
     position: fixed;
@@ -44,13 +53,57 @@ body::-webkit-scrollbar-thumb{
     color: white;
  }
 
+ @font-face {
+    font-family: 'Puget';
+    font-weight: normal;
+    src: url(../css/fonts/Puget.ttf) format('truetype');
+    font-display: swap;
+}
+
  .titulo{
     text-align: center;
-    background-color: #FE3EB2;
-    align-items: center;
-    color: white;
-    border-radius: 50px;
+    width: 100%;
+    margin: auto;
+    color: black;
+    font-family: "Puget";
+    
  }
+
+hr.line-title{
+    color: #FE3EB2;
+    margin: 5px auto 10px auto;
+    border: 0;
+    border-bottom: 2px solid #FE3EB2;
+    box-shadow: 0px 1px 15px 2px #FE3EB2;
+    width: 100%;
+}
+
+hr.line-title-libre{
+    color: rgba(0, 0, 255, 0.816);
+    margin: 5px auto 10px auto;
+    border: 0;
+    border-bottom: 2px solid rgba(0, 0, 255, 0.816);
+    box-shadow: 0px 1px 15px 2px rgba(0, 0, 255, 0.816);
+    width: 100%;
+}
+
+hr.line-title-navega{
+    color: #0065C1;
+    margin: 5px auto 10px auto;
+    border: 0;
+    border-bottom: 2px solid #0065C1;
+    box-shadow: 0px 1px 15px 2px #0065C1;
+    width: 100%;
+}
+
+hr.line-title-sunco {
+    color: #42B8BC;
+    margin: 5px auto 10px auto;
+    border: 0;
+    border-bottom: 2px solid #42B8BC;
+    box-shadow: 0px 1px 15px 2px #42B8BC;
+    width: 100%;
+}
 
 .cuadrado {
     margin: 0px 110px;
@@ -71,39 +124,98 @@ body::-webkit-scrollbar-thumb{
     justify-content: center;
     width: 100%;
     height: 80px;
-    background-color: #1c0d02;
-    color: black;
-    border:#FE3EB2;
+    background-color: rgb(233, 233, 233);
     cursor: pointer;
-    transition: .3s ease all;
+    transition: 1s ease all;
     border-radius: 5px;
-    position: relative;
-    overflow: hidden;
     padding: auto;
+    box-shadow: 3px 3px 5px 2px black;
+    border: 1px solid black;
 }
 
-.buton span{
-
-    position: relative;
-    z-index: 2;
-    transition: .3s ease all;
-}
-
-.buton.uno::after{
-    content: "";
+.buton_sunco{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 100%;
-    background-color: #5564eb;
-    position: absolute;
-    z-index: 1;
-    top: -80px;
-    left: 0;
-    transition: .3s ease-in-out all;
+    height: 80px;
+    background-color: rgb(233, 233, 233);
+    cursor: pointer;
+    transition: 1s ease all;
+    border-radius: 5px;
+    padding: auto;
+    box-shadow: 3px 3px 5px 2px black;
+    border: 1px solid black;
 }
 
-.buton.uno:hover::after {
-    top: 0;
-    color: white;
+#evidencia{
+    text-decoration: none;
+    color: #343a40;
+}
+
+/* #evidencia:hover{
+    text-decoration: none;
+    color: #343a40;
+    font-weight: 100;
+} */
+
+.buton:hover{
+    text-decoration: none;
+    background-color: #FE3EB21A;
+    box-shadow: 3px 3px 5px 2px #FE3EB2;
+    border: 1px solid #FE3EB2;
+    color: #343a40;
+}
+
+.buton_sunco:hover{
+    text-decoration: none;
+    background-color: #01aaad1a;
+    box-shadow: 3px 3px 5px 2px #01aaad;
+    border: 1px solid #01aaad;
+}
+
+.buton2{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 120px;
+    background-color: rgb(233, 233, 233);
+    cursor: pointer;
+    transition: 1s ease all;
+    border-radius: 5px;
+    padding: auto;
+    box-shadow: 3px 3px 5px 2px black;
+    border: 1px solid black;
+}
+
+.buton2_sunco{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 120px;
+    background-color: rgb(233, 233, 233);
+    cursor: pointer;
+    transition: 1s ease all;
+    border-radius: 5px;
+    padding: auto;
+    box-shadow: 3px 3px 5px 2px black;
+    border: 1px solid black;
+}
+
+.buton2:hover{
+    text-decoration: none;
+    background-color: #FE3EB21A;
+    box-shadow: 3px 3px 5px 2px #FE3EB2;
+    border: 1px solid #FE3EB2;
+}
+
+.buton2_sunco:hover{
+    text-decoration: none;
+    background-color: #42B8BC1a;
+    box-shadow: 3px 3px 5px 2px #42B8BC;
+    border: 1px solid #42B8BC;
 }
 
 /*botones grandes*/
@@ -150,11 +262,6 @@ body::-webkit-scrollbar-thumb{
 }
 
 
-
-
-
-
-
  .texto{
      text-align: center;
  }
@@ -183,18 +290,19 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 2%, rgba(124,7,153,1) 50%);
 
 }
 
-.uno{
-    color: white;
-}
 
 neww{
     text-align: left;
 
 }
 
-nuevaa{
+.nuevaa{
     text-align: justify;
     width: 100%;
+}
+
+.subtitulo{
+    font-family: "Puget";
 }
 
 .fondosg{
@@ -202,28 +310,109 @@ nuevaa{
 }
 
 
-
 .botonn{
-    width: 300px;
-    height: 300px;
+    position: relative;
+    width: 260px;
+    height: 310px;
+    margin: -10px;
     border-radius: 10px;
-    border: none;
+    border: 1px solid #FE3EB2;
+    box-shadow: 0 0 10px -1px #FE3EB2;
     cursor: pointer;
-    padding: 30px;
+    padding: 10px;
     font-size: 50px;
-    transition: .3s ease all;
-    background-color: #FE3EB2;
-
-};
-
-.hola:hover{
-    color:white;
+    transition: .3s;
+    overflow: hidden;
+    background-color: white;
+    color: #FE3EB2;
 }
 
 .botonn:hover{
-    color: white;
-    background-color: #33CAFF;
+    background-color: rgb(236, 233, 233);
+    color: #000 !important;
 }
+
+.cajon{
+    margin-right: 20px;
+    margin-left: 65px;
+}
+
+.botonn .hover{
+    position: absolute;
+    background: #878787;
+    transition: .5s;
+}
+
+.botonn .hover:nth-child(1){
+    width: 100%;
+    height: 2px;
+    top: 0;
+    left: -100%;
+}
+
+.botonn .hover:nth-child(2){
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    right: -100%;
+}
+
+.botonn .hover:nth-child(3){
+    width: 2px;
+    height: 100%;
+    bottom: -100%;
+    left: 0;
+}
+
+.botonn .hover:nth-child(4){
+    width: 2px;
+    height: 100%;
+    top: -100%;
+    right: 0;
+}
+
+.botonn:hover .hover:nth-child(1){
+    left: 0;
+}
+
+.botonn:hover .hover:nth-child(2){
+    right: 0;
+}
+
+.botonn:hover .hover:nth-child(3){
+    bottom: 0;
+}
+
+.botonn:hover .hover:nth-child(4){
+    top: 0;
+}
+
+.botonn:hover{
+    box-shadow: 0 0 10px -1px #878787;
+    border: none;
+}
+
+.botonn_div{
+    height: 280px;
+}
+
+.iconify{
+    width: 100%;
+    font-size: 70px;
+    margin-top: 0;
+}
+
+.btn-ingresa {
+    width: 100%;
+    font-size: 16px;
+    color: #FE3EB2;
+}
+
+.btn-ingresa:hover {
+    text-decoration: none;
+    color: black;   
+}
+
 
 .botonn1{
     width: 300px;
@@ -590,16 +779,16 @@ nuevaa{
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     margin: 20px;
-    text-align:center;
+    text-align: center;
     transition: all 0.25s;
     padding-bottom: 15px;
     padding-top: 25px;
-
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .container-2 .card-2:hover{
     transform: translateY(-15px);
-    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 12px 16px #FE3EB2;
 
 
 }
@@ -677,10 +866,11 @@ nuevaa{
 
 .vermas a{
     color: #6a6a6a;
-    text-decoration:double;
+    text-decoration: double;
 }
 
 .vermas a:hover{
+    text-decoration: none;
     color: #000;
 }
 
@@ -780,9 +970,6 @@ nuevaa{
     padding: 10px;
     min-width: 25%;
     max-width: 25%;
-
-
-
 }
 
 .carrusel-itemm img {
@@ -838,11 +1025,12 @@ nuevaa{
     justify-content: center;
     top: 50%;
     left: 50%;
-    margin-left: 15px;
+    margin: 13px;
 }
 
 .tam{
     font-size:13px;
+    color: #707b7c;
 }
 
 
@@ -993,7 +1181,7 @@ nuevaa{
     height: 100%;
     object-fit: cover;
     border-radius: 80%;
-
+    
 }
 
 
@@ -1005,7 +1193,7 @@ nuevaa{
     overflow-x: scroll;
     align-items: center;
     align-content: center;
-    /* justify-content: center; */
+    justify-content: center;
     padding-top: 15px;
     /* border-right:2px solid #ff0083; */
     margin-right: 10px;
