REFACTOR: Ajuste hover index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -405,7 +405,7 @@ neww{
 .btn-ingresa {
     width: 100%;
     font-size: 16px;
-    color: #FE3EB2;
+    /*color: #FE3EB2;*/
 }
 
 .btn-ingresa:hover {
