--- a/public/css/app.css
+++ b/public/css/app.css
@@ -352,36 +352,35 @@ hr.line-title-sunco {
 
  .texto{
      text-align: center;
+     margin-bottom: 20px;
  }
 
  .hola{
-     text-align: left;
+    text-align: left;
+    margin-left: 60px;
+    padding-top: 0;
  }
 
  .azul{
-
-     background-color: #36b5e4;
-     color: white;
-     text-align: center;
-     border-radius: 20px;
-
-     height: 60px;
+    background-color: #36b5e4;
+    color: white;
+    text-align: center;
+    border-radius: 20px;
+    height: 60px;
  }
 
- .juan{
-     color: #FF9516;
+.juan{
+    color: #FF9516;
 
  }
 .fondo{
+    width: 300px;
     background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 2%, rgba(124,7,153,1) 50%);
-
+    background: linear-gradient(90deg, rgba(15, 0, 36, 0.148) 15%, #FE3EB2 90%);
 }
 
-
-neww{
-    text-align: left;
-
+.fondo img{
+    margin-top: 20px;
 }
 
 .nuevaa{
@@ -494,6 +493,23 @@ neww{
     width: 100%;
     font-size: 16px;
     margin-bottom: 5px;
+}
+
+.btn-spotify {
+    width: 100%;
+    margin: 0px 140px;
+    font-size: 16px;
+    background-color: #1ed760;
+    border: 1px solid #1ed760;
+    padding: 8px;
+    border-radius: 10px;
+    color: white;
+}
+
+.btn-spotify:hover {
+    text-decoration: none;
+    background-color: #1ed760;
+    color: black;   
 }
 
 .btn-ingresa:hover {
@@ -692,19 +708,26 @@ neww{
     min-width: 300px;
     max-width: 300px;
     height: 300px;
-    outline: 2px solid #FE3EB2;
-
+    
+    transition: 1s;
 }
 
 .carrusel-item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border: 1px solid #FE3EB2;
+    filter: grayscale(100%);
+    transition: all 1s;
+}
 
+.carrusel-item img:hover{
+    filter: grayscale(0%);
 }
 
 .carrusel-item:hover {
-    transform: scale(1.3);
+    transform: scale(1.1);
+    
 }
 
 /* Carrusel Videos */
@@ -716,31 +739,30 @@ neww{
 }
 
 .carrusel-items1::-webkit-scrollbar {
-    width: 3px;
-
+    height: 8px;
 }
 
 .carrusel-items1::-webkit-scrollbar-thumb {
-    background-color: #FE3EB2;
+    background-color: #42B8BC;
     border-radius: 10px;
 }
 
-
-
+.carrusel-items1::-webkit-scrollbar-track{
+    background-color: #42b8bc69;
+}
 
 .carrusel-item1{
     min-width: 300px;
     max-width: 300px;
     height: 300px;
-    outline: 2px solid #FE3EB2;
-
+    transition: 2s;
 }
 
 .carrusel-item1 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-
+    border: 1px solid #42B8BC;
 }
 
 .carrusel-item1:hover {
@@ -1021,11 +1043,6 @@ neww{
     height: auto;
 }
 
-.modal-header{
-    color: white;
-    background-color: #FE3EB2;
-}
-
 
 .carrusel-itemss{
     width: 100%;
@@ -1100,29 +1117,23 @@ neww{
     height: 100%;
     object-fit: cover;
     border-radius: 80%;
-    margin-bottom: 20px;
+    margin: auto;   
 }
 
 .tamaño{
-    width:10rem;
+    width: 10rem;
     height: 10rem;
     text-align:center;
     justify-content: center;
     top: 50%;
     left: 50%;
-    margin: 13px;
+    margin: auto;
 }
 
 .tam{
     font-size:13px;
     color: #707b7c;
 }
-
-
-
-
-
-
 
 .container-4{
     width: 100%;
@@ -1132,15 +1143,11 @@ neww{
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
-
 }
 
-.container-4 .card-4 h4{
-    margin: 20px;
-}
 
 .container-4 .card-4{
-    width: 330px;
+    width: 380px;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
@@ -1148,16 +1155,16 @@ neww{
     margin: 20px;
     text-align:justify;
     transition: all 0.25s;
-    padding-bottom: 15px;
+    padding-bottom: 25px;
     padding-top: 25px;
 
 }
 
 .container-4 .card-4:hover{
-    /* background-color: #FE3EB2;
-    color: #fff; */
+    background-color: #1ed7601a;
+    /* color: #fff; */
     transform: translateY(-15px);
-    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 12px 16px #1ed760;
 
 
 }
@@ -1166,17 +1173,17 @@ neww{
     text-align: center;
     align-items: center;
     object-fit: cover;
-    width: 100%;
-    height: 50%;
-
+    height: 100px;
+    margin-left: 140px;
 }
 
 .container-4 .card-4 h4{
     font-weight: 600px;
+    margin: 20px;
 }
 
 .container-4 .card-4 p{
-    padding: 0 1rem;
+    padding: 1rem 1rem;
     font-size: 16px;
     font-weight: 300;
 
@@ -1188,11 +1195,6 @@ neww{
     font-size: 16px;
     font-weight: 300;
 
-}
-
-.bordes{
-
-    padding-left: 16px;
 }
 
 .posicion{
@@ -1366,3 +1368,24 @@ neww{
     margin-left: 50px;
 }
 
+.foto-video{
+    width: 100px;
+    height: 100px;
+    margin-left: 30px;
+    border-radius: 50%;
+    border: 3px solid black;
+}
+
+.card-body.visible{
+    background: #7070703d;
+   
+}
+
+.card-body.visible:hover{
+    background: #7070703d;
+    border: 3px solid black;
+}
+
+.video1 video{
+   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.648);
+}
