--- a/public/css/bootstrap.min-4.6.css
+++ b/public/css/bootstrap.min-4.6.css
@@ -354,7 +354,7 @@ h5 {
 }
 .h6,
 h6 {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 .lead {
   font-size: 1.25rem;
@@ -5209,7 +5209,9 @@ a.badge-dark:focus {
   display: block;
   padding: 0.75rem 1.25rem;
   background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 1px solid #FE3EB2;
+  width: 400px;
+  margin: 0 auto;
 }
 .list-group-item:first-child {
   border-top-left-radius: inherit;
@@ -5227,9 +5229,10 @@ a.badge-dark:focus {
 }
 .list-group-item.active {
   z-index: 2;
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  color: black;
+  background-color: #FE3EB21A;
+  border-color: #FE3EB21A;
+  border: 1px solid #FE3EB2;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
