--- a/public/css/app.css
+++ b/public/css/app.css
@@ -828,7 +828,7 @@ hr.line-title-sunco {
 }
 
 .container-1 .card-1{
-    width: 330px;
+    width: 350px;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
@@ -844,8 +844,6 @@ hr.line-title-sunco {
 .container-1 .card-1:hover{
     transform: translateY(-15px);
     box-shadow: 0px 12px 16px #FE3EB2;
-
-
 }
 
 .container-1 .card-1 img{
@@ -857,13 +855,14 @@ hr.line-title-sunco {
 
 .container-1 .card-1 h4{
     font-weight: 600px;
+    height: 70px;
 }
 
 .container-1 .card-1 p{
     padding: 0 1rem;
     font-size: 16px;
     font-weight: 300;
-
+    height: 200px;
 }
 
 .container-1 .card-1 a{
@@ -1059,14 +1058,12 @@ hr.line-title-sunco {
 .carrusel-itemss{
     width: 100%;
     display: flex;
-    overflow-y: hidden;
-    overflow-x: scroll;
+    /* overflow-y: hidden; */
+    /* overflow-x: scroll; */
     justify-content: center;
 
 }
-
-
-
+/* 
 .carrusel-itemss::-webkit-scrollbar {
     width: 3px;
 
@@ -1074,8 +1071,8 @@ hr.line-title-sunco {
 
 .carrusel-itemss::-webkit-scrollbar-thumb {
     background-color: #FE3EB2;
-    border-radius: 10px;
-}
+    border-radius: 8px;
+} */
 
 .carrusel-itemm{
     padding: 10px;
@@ -1086,6 +1083,20 @@ hr.line-title-sunco {
 .carrusel-itemm .card{
     border: 1px solid #FE3EB2;
     padding: 5px;
+    transition: all 0.25s;
+}
+
+.carrusel-itemm .card p{
+    height: 150px;
+}
+
+.carrusel-itemm .card .card-text{
+    text-align: justify;
+}
+
+.carrusel-itemm .card:hover{
+    transform: translateX(-10px);
+    box-shadow: 5px 5px 5px 0 #FE3EB2;
 }
 
 .carrusel-itemm img {
@@ -1103,6 +1114,7 @@ hr.line-title-sunco {
     width: 100%;
     height: auto;
   }
+
 @supports(object-fit: cover){
     .card img{
       height: 100%;
@@ -1132,6 +1144,16 @@ hr.line-title-sunco {
     margin: auto;   
 }
 
+.carrusel-itemms .card-body .nombre {
+    height: 110px;
+}
+
+.carrusel-itemms .card-body .cargo {
+    height: 70px;
+    font-size:13px;
+    color: #707b7c;
+}
+
 .tamaño{
     width: 10rem;
     height: 10rem;
@@ -1140,11 +1162,6 @@ hr.line-title-sunco {
     top: 50%;
     left: 50%;
     margin: auto;
-}
-
-.tam{
-    font-size:13px;
-    color: #707b7c;
 }
 
 .container-4{
@@ -1209,6 +1226,16 @@ hr.line-title-sunco {
 
 }
 
+.comites .card{
+    border: 1px solid #FE3EB2;
+    transition: all 0.25s;
+}
+
+.comites .card:hover{
+    transform: translateX(-10px);
+    box-shadow: 5px 5px 5px 0 #FE3EB2;
+}
+
 .posicion{
     justify-content: center;
     text-align: center;
@@ -1268,9 +1295,6 @@ hr.line-title-sunco {
     color: #000;
     font-size: medium;
     display: flex;
-
-
-
 }
 
 .carrusel-itemmms img {
@@ -1280,8 +1304,18 @@ hr.line-title-sunco {
     height: 100%;
     object-fit: cover;
     border-radius: 80%;
-    
 }
+
+.carrusel-itemmms .card-body .nombre {
+    height: 110px;
+}
+
+.carrusel-itemmms .card-body .cargo {
+    height: 70px;
+    font-size:13px;
+    color: #707b7c;
+}
+
 
 
 
@@ -1294,7 +1328,6 @@ hr.line-title-sunco {
     align-content: center;
     justify-content: center;
     padding-top: 15px;
-    /* border-right:2px solid #ff0083; */
     margin-right: 10px;
 }
 
