ajustes gestor admin

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1437,3 +1437,8 @@ hr.line-title-sunco {
 .video1 video{
    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.648);
 }
+
+
+.btn-editar{
+   background-color: ;
+  }
