--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,85 @@
 .bg-login{
-    background: #343a40ef;
+    background: #343a4093;
+    height: 700px;
+    background-image: url(/images/textura-pie-pagina.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
+.navbar-logo{
+    color: white;
+    font-size: 35px;
+    margin-top: 30px;
+    margin-right: 100px;
+}
+
+.img_logo{
+    width: 150px;
+    height: 50px;
+    margin-top: 30px;
+    margin-left: 50px;
+}
+
+.contenedor{
+    margin: 30px 50px;
+}
+
+.contenedor-formulario{
+    display: flex;
+}
+
+.imagen-formulario{
+    width: 800px; 
+    margin-left: 50px;
+}
+
+
+
+/* .img-formu{
+    position: relative;
+}
+
+.img-formu::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to right, rgba(191, 141, 196, 0.5), rgba(116, 19, 106, 0.5));
+} */
+
+.formulario{
+    background: white;
+    padding: 30px;
+    width: 500px;
+}
+
+.texto-formulario h1{
+    font-family: 'puget';
+    font-size: 30px;
+    color: #343a40;
+    text-align: center;
+}
+
+.input-login{
+    background: #FE3EB21A;
+    color: black;
+}
+
+.label-login{
+    font-size: 20px;
+}
+
+
+.btn-ingreso-login{
+    width: 100%;
+    font-family: 'puget';
+    border: 1px solid #FE3EB2;
+    border-radius: 10px;
+    color: white;
+    padding: 8px;
+}
 
 
 body{
